examples/test/testpolicy15802.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15802
  namespace: namespace283
spec:
  podSelector:
    matchLabels:
      key42: value36
      key30: value35
      key49: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value12
      podSelector:
        matchLabels:
          key10: value34
          key8: value5
          key26: value8
